<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_nav_dashboard"
        android:title="@string/nav_dashboard"
        android:contentDescription="@string/nav_dashboard" />
    <item
        android:id="@+id/alertsFragment"
        android:icon="@drawable/ic_nav_alerts"
        android:title="@string/nav_alerts"
        android:contentDescription="@string/nav_alerts" />
    <item
        android:id="@+id/scannerFragment"
        android:icon="@drawable/ic_nav_scanner"
        android:title="@string/nav_scanner"
        android:contentDescription="@string/nav_scanner" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings"
        android:contentDescription="@string/nav_settings" />
</menu>
